--- a/booki-RVU/styles/style.css
+++ b/booki-RVU/styles/style.css
@@ -1,545 +1,527 @@
 /****** General ***********/
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Raleway', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Raleway", sans-serif;
+  box-sizing: border-box;
 }
 
 :root {
-    --main-color: #0065FC;
-    --main-bg-color: #F2F2F2;
-    --filter-bg-color: #DEEBFF;
+  --main-color: #0065fc;
+  --main-bg-color: #f2f2f2;
+  --filter-bg-color: #deebff;
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
-    display: flex;
-    justify-content: center;
-    background: white;
+  font-family: "Raleway", sans-serif;
+  display: flex;
+  justify-content: center;
+  background: white;
 }
 
 .main-container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 0px 50px;
-    margin: 0;
+  width: 100%;
+  max-width: 1440px;
+  padding: 0px 50px;
+  margin: 0;
 }
 
 .fa-solid {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
-
 p {
-    font-size: 1rem;  /***16px***/
-    font-weight: normal;
+  font-size: 1rem; /***16px***/
+  font-weight: normal;
 }
 
 .section-title {
-    font-size: 22px;
-    font-weight: bold;
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .card {
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  background-color: white;
+  border-radius: 20px;
+  padding: 5px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
-
 .card img {
-    object-fit: cover;
-    height: auto;   
+  object-fit: cover;
+  height: auto;
 }
 
 .card-title {
-    font-size: 1rem;  /***16px***/
-    font-weight: bold;
+  font-size: 1rem; /***16px***/
+  font-weight: bold;
 }
 
 .euro {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .neutral-star {
-    color: var(--main-bg-color);
+  color: var(--main-bg-color);
 }
-
-
 
 /******header******/
 
 header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 /* *****nav bar*****add code */
 
 .logo-img {
-    width: 3.818rem;
-    height: 1.188rem;
+  width: 3.818rem;
+  height: 1.188rem;
 }
 
 nav {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 1.5rem;  /**24px**/
-    margin-bottom: 1.25rem;  /**20px**/
-    padding-bottom: 0.938rem;  /**15px**/
-    font-size: 1em; /* **16px** */
-    font-weight: 400;
-    text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1.5rem; /**24px**/
+  margin-bottom: 1.25rem; /**20px**/
+  padding-bottom: 0.938rem; /**15px**/
+  font-size: 1em; /* **16px** */
+  font-weight: 400;
+  text-align: center;
 }
 
 nav a {
-    margin: 1.25rem 1.25rem; /* **20px** */
-    padding: 0;
+  margin: 1.25rem 1.25rem; /* **20px** */
+  padding: 0;
 }
 
 nav ul {
-    display: flex;
-    gap: 1.25rem;  /**15px**/
+  display: flex;
+  gap: 1.25rem; /**15px**/
 }
 
 /* *****specific styles nav hébergements*****add code */
 
 .nav-hebergements {
-    margin: 0;
-    padding-top: 1.4rem;  /* **22.4px** */
-    color: var(--main-color);  
-    border-top: 2px solid var(--main-color);
+  margin: 0;
+  padding-top: 1.4rem; /* **22.4px** */
+  color: var(--main-color);
+  border-top: 2px solid var(--main-color);
 }
-
 
 /* *****specific styles nav Activités*****add code*/
 
 .nav-activités {
-    color: black;
-    margin: 0;
-    padding-right: 0;
+  color: black;
+  margin: 0;
+  padding-right: 0;
 }
 
 /* *****header, section info (h1+P, form)***** add code*/
 
 h1 {
-    font-size: 1.375rem;   /***22px***/
-    font-weight: 700;
-    margin-top: 0.625rem;  /* ** 10px** */
+  font-size: 1.375rem; /***22px***/
+  font-weight: 700;
+  margin-top: 0.625rem; /* ** 10px** */
 }
 
 header p {
-
-    margin: 0.5rem 0 1.562rem 0; /***8px 25px***/
-    padding: 0 0 10px 0;
+  margin: 0.5rem 0 1.562rem 0; /***8px 25px***/
+  padding: 0 0 10px 0;
 }
-
 
 /* *****add code form******* */
 
 form {
-    display: flex;
+  display: flex;
 }
 
 .fa-location-dot {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 50px;
-    max-height: 49px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    background-color: #F2F2F2;
-    color: black;
-    padding: 15px;
-    border: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 50px;
+  max-height: 49px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  background-color: #f2f2f2;
+  color: black;
+  padding: 15px;
+  border: 1px;
 }
 
 input[type="search"] {
-    max-width: 195px;
-    max-height: 49px; 
-    border: 1px solid var(--filter-bg-color);
-    border-left: none; 
-    border-right: none; 
-    border-top: 1px solid var(--main-bg-color);
-    border-bottom: 1px solid var(--main-bg-color);
-    background-color: white;
-    padding: 15px;
-    box-sizing: border-box;
-    font-family: 'raleway', sans-serif;
-    font-weight:bold;
-    font-size: 1.15rem;   /***18px***/
-    color: black;
-  }
+  max-width: 195px;
+  max-height: 49px;
+  border: 1px solid var(--filter-bg-color);
+  border-left: none;
+  border-right: none;
+  border-top: 1px solid var(--main-bg-color);
+  border-bottom: 1px solid var(--main-bg-color);
+  background-color: white;
+  padding: 15px;
+  box-sizing: border-box;
+  font-family: "raleway", sans-serif;
+  font-weight: bold;
+  font-size: 1.15rem; /***18px***/
+  color: black;
+}
 
 .button-search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 132px;
-    height: 49px;
-    background-color: var(--main-color);
-    border:none;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    color: #FfFfFf;
-    font-weight: bold;
-    text-align: center;
-    font-size: 1.125rem;  /* **20px** */
-    padding: 15px 16px 15px 16px;
-    margin: 0;
-    border: 1px;
-    cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 132px;
+  height: 49px;
+  background-color: var(--main-color);
+  border: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.125rem; /* **20px** */
+  padding: 15px 16px 15px 16px;
+  margin: 0;
+  border: 1px;
+  cursor: pointer;
 }
 
 .button-search-text {
-    display: inline;
+  display: inline;
 }
 
 .button-search-icon {
-    display: none;
+  display: none;
 }
 
 /*add code filters*/
 /*filters section*/
 
 .section-filters {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    font-size: 1.125rem;   /**18px**/
-    font-weight: 700;
-    margin: 2.188rem 0 2.188rem 0;  /***35px***/
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 1.125rem; /**18px**/
+  font-weight: 700;
+  margin: 2.188rem 0 2.188rem 0; /***35px***/
 }
 
 .section-filters ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    gap: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  gap: 15px;
 }
 
 .button-filters {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px 20px;
-    background-color: white;
-    border: 2px solid #F2F2F2;
-    border-radius: 50px;
-    font-size: 1.063rem;   /**17px**/
-    font-weight: 700;
-    color: black;
-    height: 50px;
-    cursor: default; 
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 20px;
+  background-color: white;
+  border: 2px solid #f2f2f2;
+  border-radius: 50px;
+  font-size: 1.063rem; /**17px**/
+  font-weight: 700;
+  color: black;
+  height: 50px;
+  cursor: default;
 }
 
 .filtres {
-    font-weight: bold; 
-    margin:0;
+  font-weight: bold;
+  margin: 0;
 }
 
 .button-filters:hover {
-    background-color: #DEEBFF;
-    transition: 0.5s;
+  background-color: #deebff;
+  transition: 0.5s;
 }
 
 /*icone info <p> header*/
 .info-section {
-    display: flex;
-    align-items: center;
-    margin: 35px 0px;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  margin: 35px 0px;
+  gap: 10px;
 }
 
 /*mettre la bonne icône fontawesome*/
 .info-section i {
-    color: var(--main-color); 
-    background-color: white; 
-    border: 2px solid var(--filter-bg-color); 
-    border-radius: 50%; 
-    padding: 10px; 
+  color: var(--main-color);
+  background-color: white;
+  border: 2px solid var(--filter-bg-color);
+  border-radius: 50%;
+  padding: 10px;
 }
 
 .info-section p {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
 }
-
 
 /*main*/
 
 /****** Hebergements And Populaires ***********/
 
 .hebergements-and-populaires {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
 }
 
 .hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
-    border-radius: 20px;
-    padding: 30px;
-    box-sizing: border-box;
+  background-color: var(--main-bg-color);
+  border-radius: 20px;
+  padding: 30px;
+  box-sizing: border-box;
 }
 
 .hebergements-and-populaires .hebergements {
-    padding: 30px 0 30px 30px;
+  padding: 30px 0 30px 30px;
 }
 
-/****** Hebergements ***********//*add code*/
+/****** Hebergements ***********/ /*add code*/
 
 .hebergements {
-    width: 65%;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
 }
 
 .hebergements-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap:  0px 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0px 30px;
 }
 
 .hebergements-cards a {
-    width: calc(33.333% - 30px);
-    min-height: 207.25px;
+  width: calc(33.333% - 30px);
+  min-height: 207.25px;
 }
 
 .hebergements-cards img {
-    width: 100%;
-    max-height: 124px;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
+  width: 100%;
+  max-height: 124px;
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
 }
 
 .hebergements-cards .card {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    max-height: 207.25px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  max-height: 207.25px;
 }
 
 .hebergements .card-content {
-    padding-left: 10px;
-    margin: 4px 0 0 10px;
-
+  padding-left: 10px;
+  margin: 4px 0 0 10px;
 }
 
 .hebergements-cards .card-title {
-    
-    font-size: 1rem;
-    font-weight: bold;
-    text-align: left;
+  font-size: 1rem;
+  font-weight: bold;
+  text-align: left;
 }
 
 .hebergements-cards .card-subtitle {
-    font-size: 0.875rem;  /***14px***/
+  font-size: 0.875rem; /***14px***/
 }
 
-
 .hebergements-cards .card-rating {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .afficher-plus {
-    margin: 30px 0 0 0;
-    color: black;
-    font-weight: bold;
+  margin: 30px 0 0 0;
+  color: black;
+  font-weight: bold;
 }
 
 /****** Populaires ***********/
 
 .populaires {
-    width: 32%;
-    padding: 30px;
+  width: 32%;
+  padding: 30px;
 }
 
 .populaires-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .populaires-cards .card {
-    display: flex;
-    margin-top: 33px;
+  display: flex;
+  margin-top: 33px;
 }
 
 .populaires-cards img {
-    width: 33%;
-    height: 136px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+  width: 33%;
+  height: 136px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .populaires-cards .card-content {
-    width: 67%;
-    padding-left: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
+  width: 67%;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .populaires-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+  margin-top: 10px;
+  margin-bottom: 4px;
 }
 
 .populaires-cards .card-subtitle {
-    font-size: 0.875rem;  /***14px***/
+  font-size: 0.875rem; /***14px***/
 }
 
 .populaires-cards .card-rating {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 /* *****activités à Marseille***** */
 
 .activity {
-    background-color: white;
-    width: 100%;
-    display: flex; 
-    flex-direction: column;
-    padding: 30px; 
-    margin-top: 35px;;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  margin-top: 35px;
 }
 
 .activity h2 {
-    padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 .activity-cards {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
 }
 
 .card-activity {
-    flex: 1 1 calc(25% - 30px); /* Divisé en 4 moins la taille du gap */
-    display: flex;
-    flex-direction: column;
-    background: white;
-    box-shadow: 4px 8px 5px 3px #dad9d9d1;
-    border-radius: 20px;
+  flex: 1 1 calc(25% - 30px); /* Divisé en 4 moins la taille du gap */
+  display: flex;
+  flex-direction: column;
+  background: white;
+  box-shadow: 4px 8px 5px 3px #dad9d9d1;
+  border-radius: 20px;
 }
 
-.card-activity img { 
-    object-fit: cover;
-    width: 100%;
-    height: 380px;
-    border-radius: 20px 20px 0 0;
+.card-activity img {
+  object-fit: cover;
+  width: 100%;
+  height: 380px;
+  border-radius: 20px 20px 0 0;
 }
 
 .card-activity h3 {
-   
-    font-size: 1rem;
-    padding: 19px 20px;
+  font-size: 1rem;
+  padding: 19px 20px;
 }
-    
+
 /* *****footer***** (add code)*/
 
 footer {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background: #f2f2f2;
-    margin: 30PX 0 0;
-    padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background: #f2f2f2;
+  margin: 30px 0 0;
+  padding: 20px;
 }
 
 footer h4 {
-    font-size: 1.125rem;
-    font-weight: bold;
-    text-align: start;
+  font-size: 1.125rem;
+  font-weight: bold;
+  text-align: start;
 }
 
 footer ul {
-    display:flex;
-    flex-direction: column;
-    padding: 0;
-    gap: 0.938rem;
-
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 0.938rem;
 }
 
 .section-footer {
-    display: flex;
-    flex: 1 1 calc(33.333%);
+  display: flex;
+  flex: 1 1 calc(33.333%);
 }
-
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-    .hebergements-and-populaires {
-        flex-direction: column;
-    }
+  .hebergements-and-populaires {
+    flex-direction: column;
+  }
 
-    .hebergements {
-        width: 100%;
-    }
+  .hebergements {
+    width: 100%;
+  }
 
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
-    }
+  .populaires {
+    width: 100%;
+    margin-top: 50px;
+  }
 
-    .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+  .populaires-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-    .populaires-cards a {
-        width: 30%;
-    }
+  .populaires-cards a {
+    width: 30%;
+  }
 
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
+  .populaires-cards .card-title {
+    font-size: 14px;
+  }
 
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
-    }
+  .populaires-cards .card-subtitle {
+    font-size: 13px;
+  }
 }
 
-
 /* Small devices (phones, less than 768px) */
-@media screen and  (max-width: 767.98px) {
-    /* ... */
+@media screen and (max-width: 767.98px) {
+  /* ... */
 }
 
 /******code large dektop****/
 
 @media screen and (min-width: 1440px) {
-
-.main-container {
-        width: 100%;
-        max-width: 1440px;
-        background: #fff;
-    }
+  .main-container {
+    width: 100%;
+    max-width: 1440px;
+    background: #fff;
+  }
 }
