--- a/booki-RVU/styles/styles-mobile.css
+++ b/booki-RVU/styles/styles-mobile.css
@@ -1,10 +1,5 @@
 @media screen and (min-width: 320px) and (max-width: 767.95px) {
-  * {
-    font-family: "Raleway", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+ 
 
   .main-container {
     width: 100%;
@@ -229,16 +224,19 @@
   footer h4 {
     font-size: 1.125rem;
     font-weight: bold;
+    align-self: flex-start;
   }
 
   footer ul {
     padding: 0;
-    text-align: left;
+    align-self: flex-start;
     gap: 0.938rem; /***15px***/
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 374px) {
+
+
   .button-filters {
     padding: 0.25rem 1.188rem;
     height: 3.125rem; /**50px**/
