--- a/booki-RVU/styles/styles-tablette.css
+++ b/booki-RVU/styles/styles-tablette.css
@@ -1,10 +1,5 @@
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  * {
-    font-family: "Raleway", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+ 
 
   .main-container {
     width: 100%;
@@ -73,12 +68,12 @@
   /****section activity*****/
 
   .card-activity {
-    max-height: 270px;
+    height: 270px;
     width: 100%;
   }
 
   .card-activity img {
-    max-height: 200px;
+    height: 200px;
     width: 100%;
   }
 
@@ -87,11 +82,14 @@
   footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 20px;
-    background: var(--main-bg-color);
+
+
   }
 
   footer .section-footer {
+    display: flex;
+    justify-content: flex-start;
+
     text-align: left;
   }
 
@@ -99,14 +97,15 @@
     font-size: 1rem;
     font-weight: 700;
     margin-bottom: 10px;
+    text-align: left;
   }
 
   footer ul {
     list-style-type: none;
-    padding: 0 20px;
+    padding: 0;
   }
 
   footer ul li {
-    margin-bottom: 5px; /** a vérifier***/
+    margin-bottom: 5px;
   }
 }
