--- a/booki-RVU/styles/style.css
+++ b/booki-RVU/styles/style.css
@@ -87,8 +87,8 @@ header {
 /* *****nav bar***** */
 
 .logo-img {
-  width: 3.818rem;  /**61px**/
-  height: 1.188rem;   /***19px***/
+  width: 3.818rem; /**61px**/
+  height: 1.188rem; /***19px***/
 }
 
 nav {
@@ -123,7 +123,6 @@ nav ul {
   border-top: 2px solid var(--main-color);
 }
 
-
 /* *****specific styles nav Activités*****add code*/
 
 .nav-activités {
@@ -132,7 +131,7 @@ nav ul {
   padding-right: 0;
 }
 
-/* *****header, section info (h1+P, form)***** add code*/
+/* *****header***** */
 
 h1 {
   font-size: 1.375rem; /***22px***/
@@ -145,7 +144,7 @@ header p {
   padding: 0 0 10px 0;
 }
 
-/* *****add code form******* */
+/* *****form******* */
 
 form {
   display: flex;
@@ -183,7 +182,7 @@ input[type="search"] {
 }
 
 ::placeholder {
-    color: black;
+  color: black;
 }
 
 .button-search {
@@ -204,7 +203,6 @@ input[type="search"] {
   margin: 0;
   border: 1px;
   cursor: pointer;
-
 }
 
 .button-search-text {
@@ -260,7 +258,8 @@ input[type="search"] {
   transition: 0.5s;
 }
 
-/*icone info <p> header*/
+/*icone info header*/
+
 .info-section {
   display: flex;
   align-items: center;
@@ -269,12 +268,13 @@ input[type="search"] {
 }
 
 /*mettre la bonne icône fontawesome*/
-.info-section i {
+.fa-info {
   color: var(--main-color);
   background-color: white;
   border: 2px solid var(--filter-bg-color);
   border-radius: 50%;
   padding: 10px;
+  text-align: center;
 }
 
 .info-section p {
@@ -320,18 +320,18 @@ input[type="search"] {
 }
 
 .hebergements-cards a {
-    width: calc(33.333% - 30px);
-    min-height: 207.25px;
-  }
+  width: calc(33.333% - 30px);
+  min-height: 207.25px;
+}
 
 .hebergements-cards .card {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    height: 207.25px;
-    padding-bottom: 15px;
-    gap: 4px 0;
-;  }
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  height: 207.25px;
+  padding-bottom: 15px;
+  gap: 4px 0;
+}
 
 .hebergements-cards img {
   width: 100%;
@@ -340,12 +340,11 @@ input[type="search"] {
   object-fit: cover;
 }
 
-
 .hebergements .card-content {
   padding: 0 15px;
   margin: 0;
   width: auto;
-  height: 64px; 
+  height: 64px;
 }
 
 .hebergements-cards .card-title {
@@ -361,9 +360,8 @@ input[type="search"] {
 }
 
 .hebergements-cards .card-rating {
-    margin: 0;
-    padding:0;
- 
+  margin: 0;
+  padding: 0;
 }
 
 .afficher-plus {
@@ -444,7 +442,7 @@ input[type="search"] {
   display: flex;
   flex-direction: column;
   background: white;
-  box-shadow:  0px 3px 15px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
 }
 
@@ -456,10 +454,10 @@ input[type="search"] {
 }
 
 .card-activity h3 {
-   font-size: 1rem;
-   width: 100%;
-   padding: 19px 20px;
-   margin: 0;
+  font-size: 1rem;
+  width: 100%;
+  padding: 19px 20px;
+  margin: 0;
 }
 
 /* *****footer***** */
@@ -490,7 +488,7 @@ footer ul {
 .section-footer {
   display: flex;
   flex-direction: column;
- justify-content: start;
+  justify-content: start;
 
   flex: 1 1 calc(33.333%);
 }
